deploy/k8s/weather-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: weather-service
  name: weather-service
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: weather-service
  template:
    metadata:
      labels:
        k8s-app: weather-service
    spec:
      containers:
      - args:
        image: weather-service
        imagePullPolicy: Never
        name: weather-service
        ports:
        - containerPort: 5000
          protocol: TCP

---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: weather-service
  name: weather-service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 5000
  selector:
    k8s-app: weather-service
