deploy/k8s/oauth2-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
#  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
  - host: weather-service.local
    http:
      paths:
      - path: /oauth2
        pathType: Prefix
        backend:
          service:
            name: oauth2-proxy
            port:
              number: 4180
